--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -25,7 +25,7 @@
 
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:text="EMAIL"
+                      android:text="@string/email"
                       android:textColor="@color/colorPrimaryDark"
 
             />
@@ -33,12 +33,12 @@
             <EditText android:id="@+id/editEmail"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:hint="Enter email"
+                      android:hint="@string/ent_email"
                       android:textColorHint="@color/colorPrimary"/>
 
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:text="PASSWORD"
+                      android:text="@string/pass"
                       android:textColor="@color/colorPrimaryDark"
                       android:layout_marginTop="40dp"
             />
@@ -47,7 +47,7 @@
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPassword"
-                      android:hint="Enter password"
+                      android:hint="@string/ent_pass"
                       android:textColorHint="@color/colorPrimary"/>
 
             <Button android:id="@+id/button"
