--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+>
+
+    <ImageView android:id="@+id/bg"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:src="@drawable/bg_blur"
+               android:scaleType="centerCrop"/>
+
+    <LinearLayout android:id="@+id/layout"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical"
+                  android:padding="40dp"
+                  android:layout_margin="40dp"
+                  android:layout_gravity="center"
+                  android:background="@color/colorWhite">
+
+        <ImageView android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:src="@drawable/enter"
+                   android:scaleType="fitCenter"
+                   android:layout_gravity="center_horizontal"
+        />
+
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="EMAIL"
+                  android:textColor="@color/colorPrimaryDark"
+                  android:layout_marginTop="40dp"
+                  android:fontFamily=""
+        />
+
+        <EditText  android:id="@+id/editEmail"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:hint="Enter email"
+                   android:textColorHint="@color/colorPrimary"/>
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="PASSWORD"
+                  android:textColor="@color/colorPrimaryDark"
+                  android:layout_marginTop="40dp"
+        />
+
+        <EditText android:id="@+id/editPass"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:inputType="textPassword"
+                  android:hint="Enter password"
+                  android:textColorHint="@color/colorPrimary"/>
+
+        <Button android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="40dp"
+                android:text="LOGIN"
+                android:textColor="@color/colorPrimary"
+                android:background="@color/colorPrimaryDark"
+
+        />
+    </LinearLayout>
+
+
+
+</FrameLayout>
+
